--- a/requirements_jax.txt
+++ b/requirements_jax.txt
@@ -1,6 +1,6 @@
 absl-py==1.4.0
 alabaster==0.7.12
-anaconda-client==1.11.0
+anaconda-client>=1.11.0,<1.2.2
 anaconda-project==0.11.1
 anyio==3.5.0
 appdirs==1.4.4
